<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bckgr"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity2"
    android:padding="16dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vxod"
        android:textSize="45sp"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"/>
    <EditText
        android:id="@+id/etUsername"
        android:layout_marginTop="200dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"
        android:hint="@string/vvoduser" />

    <EditText
        android:layout_marginTop="20dp"
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vvodpass"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"
        android:inputType="textPassword" />

    <Button
        android:layout_marginTop="100dp"
        android:background = "@drawable/button"
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textAllCaps="false"
        android:text="@string/enter" />
</LinearLayout>